cli/tests/snapshot/snapshots/snapshot__eval_stderr_yaml_parse_failure.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: yaml parse error: Nickel records only support string keys
  ┌─ [IMPORTS_PATH]/invalid.yaml:1:1
  │
1 │ [1, 2]: foo
  │ ^^^^^^
  │
  ┌─ [INPUTS_PATH]/errors/yaml_parse_failure.ncl:3:1
  │
3 │ import "../../imports/invalid.yaml"
  │ ----------------------------------- imported here
